--- a/NuGet/Xam.Forms.MarkdownView.nuspec
+++ b/NuGet/Xam.Forms.MarkdownView.nuspec
@@ -4,28 +4,26 @@
     <id>Xam.Forms.MarkdownView</id>
     <version>$version$</version>
     <title>MarkdownView for Xamarin.Forms</title>
-    <authors>Aloïs Deniel</authors>
+    <authors>Aloïs Deniel, Pauli Jokela</authors>
     <owners>Aloïs Deniel</owners>
     <licenseUrl>https://github.com/aloisdeniel/MarkdownView/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/aloisdeniel/MarkdownView/</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/aloisdeniel/MarkdownView/master/Documentation/Logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Native markdown rendering for Xamarin.Forms.</description>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright 2017-2018</copyright>
     <tags>xamarin ios android md markdown native</tags>
     <dependencies>
         <group>
-            <dependency id="SkiaSharp.Svg" version="1.59.0" />
-            <dependency id="Markdig" version="0.13.2" />
-            <dependency id="Xamarin.Forms" version="2.4.0.269-pre2" />
+            <dependency id="SkiaSharp" version="1.59.3" />
+            <dependency id="SkiaSharp.Svg" version="1.59.1" />
+            <dependency id="Markdig" version="0.14.9" />
+            <dependency id="Xamarin.Forms" version="2.5.0.122203" />
         </group>
     </dependencies>
   </metadata>
    <files>
-     <!-- PCL -->
-     <file src="..\Sources\MarkdownView.Portable\bin\Release\Xam.Forms.MarkdownView.dll" target="lib\portable-net45+win8+wpa81+wp8\Xam.Forms.MarkdownView.dll"/>
-
      <!-- NETStandard -->
-     <file src="..\Sources\MarkdownView.Portable\bin\Release\Xam.Forms.MarkdownView.dll" target="lib\netstandard1.0\Xam.Forms.MarkdownView.dll"/>
+     <file src="../Sources/MarkdownView/bin/Release/netstandard2.0/Xam.Forms.MarkdownView.dll" target="lib/netstandard2.0/Xam.Forms.MarkdownView.dll"/>
    </files>
 </package>
